[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]

# 在window系统上
# `cargo install -f cargo-binutils`
# `rustup component add llvm-tools-preview`
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# 在Linux系统上
# - Ubuntu系统 `sudo apt-get install lld clang`
# - Arch 系统 `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# 在macOS系统上，`brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]